# loki

./: .gitignore  CMakeLists.txt  README.md
demo/: compiler.cpp  compiler.hpp  lexer.cpp  lexer.hpp  main.cpp  token.hpp
demo/examples/: main.lkc
examples/: main.lk
include/loki/: bytecode.hpp  bytecode_istream.hpp  bytecode_ostream.hpp  stack_action.hpp  value.hpp  virtual_machine.hpp
src/: bytecode_istream.cpp  bytecode_ostream.cpp  virtual_machine.cpp
src/stack_actions/: vm_add.cpp  vm_div.cpp  vm_mul.cpp  vm_print.cpp  vm_push.cpp  vm_sub.cpp
